# footballers-career

./: .gitignore  README.md  careers.csv  clean.py  fifa100.csv  fifa100.py  flashscore2.py  flashscrore1.py  foot_career_quiz.xlsx  main.py  pyproject.toml
